fix whitespace problem

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0px;
   font-family: 'Poppins';
   scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 hr{
   position: relative;
